Fix footer on mobile

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -303,6 +303,7 @@ header {
     p {
         font-size: rem(14);
         @include transition;
+        margin: auto;
         @include desktop-xs {
             font-size: rem(18);
         }
